--- a/CS4310/Nachos/nachos.conf
+++ b/CS4310/Nachos/nachos.conf
@@ -1,10 +1,15 @@
-Machine.stubFileSystem = false
-Machine.processor = false
-Machine.console = false
+Machine.stubFileSystem = true
+FileSystem.testDirectory = ./src/nachos/test
+Machine.processor = true
+Machine.console = true
 Machine.disk = false
 Machine.bank = false
 Machine.networkLink = false
-ElevatorBank.allowElevatorGUI = true
+Machine.usingTLB = false
+Processor.numPhysPages = 64
+ElevatorBank.allowElevatorGUI = false
 NachosSecurityManager.fullySecure = false
 ThreadedKernel.scheduler = nachos.threads.RoundRobinScheduler #nachos.threads.PriorityScheduler
-Kernel.kernel = nachos.threads.ThreadedKernel
+Kernel.shellProgram = halt.coff
+Kernel.processClassName = nachos.userprog.UserProcess
+Kernel.kernel = nachos.userprog.UserKernel
