--- a/CS4310/Nachos/nachos.conf
+++ b/CS4310/Nachos/nachos.conf
@@ -10,6 +10,6 @@ Processor.numPhysPages = 64
 ElevatorBank.allowElevatorGUI = false
 NachosSecurityManager.fullySecure = false
 ThreadedKernel.scheduler = nachos.threads.RoundRobinScheduler #nachos.threads.PriorityScheduler
-Kernel.shellProgram = halt.coff
+Kernel.shellProgram = echo.coff
 Kernel.processClassName = nachos.userprog.UserProcess
 Kernel.kernel = nachos.userprog.UserKernel
